Attempt to import launchpad keystores

--- a/default.env
+++ b/default.env
@@ -30,3 +30,7 @@ START_GETH=true
 # This is the node that beacon nodes should use whilst they are running and
 # producing blocks. Does not require any accounts.
 VOTING_ETH1_NODE=http://geth:8545
+
+# Import Eth2 Launch Pad validators
+IMPORT_LAUNCHPAD=true
+KEYSTORE_PASSWD=password-here
