--- a/default.env
+++ b/default.env
@@ -18,7 +18,17 @@ START_VALIDATOR=
 # The following settings are only required if `START_VALIDATOR` is enabled and
 # `VALIDATOR_COUNT` is greater than zero.
 
-# The number of validators that should be created on first boot.
+# Set to anything other than empty to import keystore files generated with
+# eth2.0-deposit-cli
+IMPORT_LAUNCHPAD_KEYSTORES=
+
+# Set to the keystore encryption password used in eth2.0-deposit-cli. Only
+# required if `IMPORT_LAUNCHPAD_KEYSTORES` is set.
+LAUNCHPAD_KEYSTORE_PASSWD=
+
+# If `IMPORT_LAUNCHPAD_KEYSTORES` is not set, a new wallet will be generated
+# and validators derived from it. `VALIDATOR_COUNT` is the number of validators
+# that should be created on first boot.
 VALIDATOR_COUNT=1
 
 # Set to anything other than empty to start a geth instance.
