--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
         volumes:
             - ./lighthouse-data:/root/.lighthouse
             - ./scripts:/root/scripts
+            - ./validator_keys:/root/validator_keys
         depends_on:
             - beacon_node
         env_file: .env
@@ -33,4 +34,3 @@ services:
             - 30303:30303/udp
         env_file: .env
         command: /root/scripts/start-geth.sh
-
