--- a/default.env
+++ b/default.env
@@ -40,3 +40,6 @@ START_GETH=
 # This is the node that beacon nodes should use whilst they are running and
 # producing blocks. Does not require any accounts.
 VOTING_ETH1_NODE=http://geth:8545
+
+# Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
+ENABLE_METRICS=
