Configurable lighthouse and geth docker tags

--- a/default.env
+++ b/default.env
@@ -1,3 +1,8 @@
+# Docker tags to pull. Can be used to control which Lighthouse and Geth
+# versions are deployed.
+LIGHTHOUSE_VERSION=v0.3.3
+GETH_VERSION=release-1.9
+
 # The logging level.
 #
 # Set to `debug` or `trace` for detailed information.
