--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     beacon_node:
         image: sigp/lighthouse:${LIGHTHOUSE_VERSION}
         volumes:
-            - ./lighthouse-data:/root/.lighthouse
+            - ${LIGHTHOUSE_DATA}:/root/.lighthouse
             - ./scripts:/root/scripts:ro
         ports:
             - 5052:5052/tcp
@@ -18,7 +18,7 @@ services:
     validator_client:
         image: sigp/lighthouse:${LIGHTHOUSE_VERSION}
         volumes:
-            - ./lighthouse-data:/root/.lighthouse
+            - ${LIGHTHOUSE_DATA}:/root/.lighthouse
             - ./scripts:/root/scripts:ro
             - ./validator_keys:/root/validator_keys:ro
         depends_on:
@@ -32,7 +32,7 @@ services:
         image: ethereum/client-go:${GETH_VERSION}
         entrypoint: /bin/sh
         volumes:
-            - ./geth-data:/root/.ethereum
+            - ${GETH_DATA}:/root/.ethereum
             - ./scripts:/root/scripts:ro
         ports:
             - 30303:30303/tcp
