added flag to enable slasher

--- a/default.env
+++ b/default.env
@@ -43,3 +43,6 @@ VOTING_ETH1_NODE=http://geth:8545
 
 # Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
 ENABLE_METRICS=
+
+# Set to anything other than empty to start the lighthouse included slasher.
+START_SLASHER=
