changed beacon node flag --eth1-endpoint to --eth1-endpoints to support fallback flags, changed env variable in default.env

--- a/default.env
+++ b/default.env
@@ -37,9 +37,10 @@ VALIDATOR_COUNT=1
 # is not set to some external geth node.
 START_GETH=
 
-# This is the node that beacon nodes should use whilst they are running and
-# producing blocks. Does not require any accounts.
-VOTING_ETH1_NODE=http://geth:8545
+# These are the nodes that beacon nodes should use whilst they are running and
+# producing blocks. Does not require any accounts. To specify fallback nodes add
+# them comma separated.
+VOTING_ETH1_NODES=http://geth:8545
 
 # Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
 ENABLE_METRICS=
