--- a/default.env
+++ b/default.env
@@ -41,5 +41,9 @@ START_GETH=
 # producing blocks. Does not require any accounts.
 VOTING_ETH1_NODE=http://geth:8545
 
+# Set an optional number of blocks searched for deposit logs from eth1 nodes to
+# reduce the size of return result. This may help in case of GetDepositLogsFailed error.
+SEARCH_BLOCKS=
+
 # Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
 ENABLE_METRICS=
