Remove default docker tags

--- a/default.env
+++ b/default.env
@@ -1,7 +1,10 @@
 # Docker tags to pull. Can be used to control which Lighthouse and Geth
 # versions are deployed.
-LIGHTHOUSE_VERSION=v1.0.1
-GETH_VERSION=release-1.9
+#
+# Search for a valid Docker tag on https://hub.docker.com/r/sigp/lighthouse/tags
+LIGHTHOUSE_VERSION=
+# Search for a valid Docker tag on https://hub.docker.com/r/ethereum/client-go/tags
+GETH_VERSION=
 
 # The logging level.
 #
