added configurable --private flag

--- a/default.env
+++ b/default.env
@@ -10,6 +10,10 @@ NETWORK=
 # Add an arbitrary string to the proposing block
 GRAFFITI=
 
+# Set to anything other than empty to zero-out graffiti and do not publish
+# client information in the identify protocol.
+PRIVATE=
+
 # Set to anything other than empty to start the validator client.
 START_VALIDATOR=
 
