Set default docker tags to ligthouse `latest` and geth `stable`

--- a/default.env
+++ b/default.env
@@ -2,9 +2,9 @@
 # versions are deployed.
 #
 # Search for a valid Docker tag on https://hub.docker.com/r/sigp/lighthouse/tags
-LIGHTHOUSE_VERSION=
+LIGHTHOUSE_VERSION=latest
 # Search for a valid Docker tag on https://hub.docker.com/r/ethereum/client-go/tags
-GETH_VERSION=
+GETH_VERSION=stable
 
 # The logging level.
 #
