Configurable lighthouse and geth docker tags (#37)
* Configurable lighthouse and geth docker tags

* Update lighthouse version

* Update lighthouse version

* Remove default docker tags

* Set default docker tags to ligthouse `latest` and geth `stable`

--- a/default.env
+++ b/default.env
@@ -1,3 +1,11 @@
+# Docker tags to pull. Can be used to control which Lighthouse and Geth
+# versions are deployed.
+#
+# Search for a valid Docker tag on https://hub.docker.com/r/sigp/lighthouse/tags
+LIGHTHOUSE_VERSION=latest
+# Search for a valid Docker tag on https://hub.docker.com/r/ethereum/client-go/tags
+GETH_VERSION=stable
+
 # The logging level.
 #
 # Set to `debug` or `trace` for detailed information.
