added validator monitoring flags which can be enabled via environment variables

--- a/default.env
+++ b/default.env
@@ -49,5 +49,16 @@ SEARCH_BLOCKS=
 # Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
 ENABLE_METRICS=
 
+# Set to anything other than empty to enable automatic validator monitoring.
+ENABLE_MONITORING_AUTO=
+
+# Provide 0x prefixed public keys for manual validator monitoring. To specify multiple
+# public keys add them comma separated.
+ENABLE_MONITORING_MANUAL=
+
+# Set to anything other than empty to enable full network view when monitoring
+# validators that aren't connected to the beacon node.
+ENABLE_FULL_NETWORK_VIEW=
+
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
