Added accidentally removed enable auto monitoring

--- a/default.env
+++ b/default.env
@@ -65,6 +65,8 @@ SEARCH_BLOCKS=
 # Set to anything other than empty to enable the metrics endpoint port 5054 on beacon node.
 ENABLE_METRICS=
 
+# Set to anything other than empty to enable automatic validator monitoring.
+ENABLE_MONITORING_AUTO=
 
 # Provide 0x prefixed public keys for manual validator monitoring. To specify multiple
 # public keys add them comma separated.
