Add slash protection

--- a/default.env
+++ b/default.env
@@ -78,3 +78,9 @@ ENABLE_FULL_NETWORK_VIEW=
 
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
+
+# Set to anything other than empty to import slash protection when starting validator
+IMPORT_SLASH_PROTECTION=
+
+# Set to location from where to import the slash protection export e.g., from prysm <path to slashing_protection.json>
+SLASH_PROTECTION_JSON_PATH=
