--- a/default.env
+++ b/default.env
@@ -82,5 +82,5 @@ START_SLASHER=
 # Set to anything other than empty to import slash protection when starting validator
 IMPORT_SLASH_PROTECTION=
 
-# Set to location from where to import the slash protection export e.g., from prysm <path to slashing_protection.json>
+# Set the filename of slash protection export e.g., from prysm <slashing_protection.json>
 SLASH_PROTECTION_JSON_PATH=
