--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
             - ./lighthouse-data:/root/.lighthouse
             - ./scripts:/root/scripts:ro
             - ./validator_keys:/root/validator_keys:ro
+            - ./slash-protection:/root/slash-protection:ro
         depends_on:
             - beacon_node
         ports:
