--- a/default.env
+++ b/default.env
@@ -76,5 +76,8 @@ ENABLE_MONITORING_MANUAL=
 # validators that aren't connected to the beacon node.
 ENABLE_FULL_NETWORK_VIEW=
 
+# Set a monitoring endpoint to provide client information to.
+MONITORING_ENDPOINT=
+
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
