Add support for monitoring endpoint

--- a/default.env
+++ b/default.env
@@ -68,6 +68,10 @@ ENABLE_METRICS=
 # Set to anything other than empty to enable automatic validator monitoring.
 ENABLE_MONITORING_AUTO=
 
+# Enables the monitoring service for sending system metrics to a remote endpoint.
+# Set to the monitoring service api url
+MONITORING_SERVICE_ENDPOINT=
+
 # Provide 0x prefixed public keys for manual validator monitoring. To specify multiple
 # public keys add them comma separated.
 ENABLE_MONITORING_MANUAL=
