--- a/default.env
+++ b/default.env
@@ -80,5 +80,8 @@ ENABLE_MONITORING_MANUAL=
 # validators that aren't connected to the beacon node.
 ENABLE_FULL_NETWORK_VIEW=
 
+# Set to anything other than empty to enable doppelganger protection.
+ENABLE_DOPPELGANGER_PROTECTION=
+
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
