Add suggested fee recipient options

--- a/default.env
+++ b/default.env
@@ -88,3 +88,15 @@ CHECKPOINT_SYNC_URL=
 
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
+
+# Set to anything other than empty to set the suggested fee recipient via a `fee_recipient.txt` file placed in `fee_recipient/`.
+# The file should contain key value pairs corresponding to validator public keys and their associated fee recipient, see example_fee_recipient.txt.
+# The file can optionally contain a default key for the default case. This option is useful for dynamically changing fee recipients. 
+# This file is reloaded each time a validator is chosen to propose a block.
+SUGGESTED_FEE_RECIPIENT_FILE=
+
+# Default value for all validators where a suggested_fee_recipient is not loaded from another method such as validator_definitions.yml, --suggested-fee-recipient-file.
+SUGGESTED_FEE_RECIPIENT_VC=
+
+# Default value when the validator client does not transmit a suggested_fee_recipient to the beacon node.
+SUGGESTED_FEE_RECIPIENT_BN=
