feat: the merge readiness changes

--- a/default.env
+++ b/default.env
@@ -49,11 +49,6 @@ VALIDATOR_COUNT=1
 # is not set to some external geth node.
 START_GETH=
 
-# These are the nodes that beacon nodes should use whilst they are running and
-# producing blocks. Does not require any accounts. To specify fallback nodes add
-# them comma separated.
-VOTING_ETH1_NODES=http://geth:8545
-
 # These are the beacon nodes the validator client will attempt to contact to
 # perform duties. To specify fallback nodes add them comma separated.
 VOTING_ETH2_NODES=http://beacon_node:5052
@@ -88,3 +83,10 @@ CHECKPOINT_SYNC_URL=
 
 # Set to anything other than empty to start the lighthouse included slasher.
 START_SLASHER=
+
+# This specifies to url to the local Geth node. In the vast majority of cases this
+# should not be changed
+EXECUTION_ENDPOINT=http://geth:8551
+
+# Set to your ETH address to define a fee recipient
+SUGGESTED_FEE_RECIPIENT=
